--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-# Ignore Everything
+# Ignore everything
 *
 # But descend into directories
 !*/
 # Recursively allow files under subtree
 !/subtree/**
 # You can be specific with these rules
-!/New World/**
+!/GtHorizon/NewWorld/**
 !.gitignore
